[package]
name = "qwt"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
bytes = "1.10.1"
hex = "0.4.3"
octets = "0.3.0"
quiche = "0.24.1"
ring = "0.17.14"
rustls = { version = "0.23.25", features = ["ring"] }
rustls-pemfile = "2.2.0"
s2n-quic = "1.57.0"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
